# signal-scribe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ingest-filings.yml
docs/: deployment.md
migrations/: 001_initial.sql  002_security_and_indexes.sql  003_persist_full_filing_run.sql  004_section_embeddings_search.sql  005_universes_and_ingestion_queue.sql
src/signal_scribe/: analyzer.py  api.py  cli.py  config.py  embeddings.py  financials.py  ingestion.py  mcp_server.py  pipeline.py  profile_contracts.py  profile_service.py  schemas.py  sec_client.py  sections.py  storage.py
tests/: test_analyzer.py  test_api_profile.py  test_embeddings.py  test_financials.py  test_ingestion.py  test_profile_service.py  test_sec_client.py  test_sections.py
