[project]
name = "signal-scribe"
version = "0.1.0"
description = "SEC EDGAR financial filings ingestion and analysis agent backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.99.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "supabase>=2.6.0",
    "typer>=0.12.3",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]
dev = [
    "pytest>=8.2.0",
    "respx>=0.21.1",
    "ruff>=0.5.0",
]

[project.scripts]
signal-scribe = "signal_scribe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_scribe"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
